2004-07-06  Keisuke Nishida  <knishida@open-cobol.org>

	* parser.y (add_statement, add_body, compute_statement, compute_body)
	(divide_statement, divide_body, multiply_statement, multiply_body)
	(subtract_statement, subtract_body): Parse on_size_error before
	emitting the statement.
	* typeck.c (build_store_option): New function.
	(decimal_assign, build_decimal_assign, cb_build_add) 
	(cb_build_sub, cb_emit_divide): Updated for the new store scheme
	in libcob.

2004-05-15  Keisuke Nishida  <knishida@open-cobol.org>

	* parser.y (stop_statement): Accept RETURNING/GIVING phrase.
	* typeck.c, tree.h (cb_emit_stop_run): Take an argument.

2004-05-06  Keisuke Nishida  <knishida@open-cobol.org>

	* parser.y (procedure_division, entry_statement): Use using_clause.
	* codegen.c (codegen, output_entry_function): Handle using_list
	with BY REFERENCE/CONTENT/VALUE.
	* typeck.c, tree.h (cb_build_using_list): Removed.
	* cobc.c (process_translate): Do not call codegen when no entry.

2004-05-04  Keisuke Nishida  <knishida@open-cobol.org>

	* parser.y (x): Accept literal with LENGTH OF operator.
	* typeck.c (cb_build_length): Handle non-references.

2004-05-04  Keisuke Nishida  <knishida@open-cobol.org>

	* typeck.c (cb_build_move_field): Optimize when the usage of src
	and dst are the same, not only when they are DISPLAY.
	(cb_build_move_high, cb_build_move_low): Really move low/high
	values to numeric fields.
	(cb_build_move): Do not convert 0 literal to ZERO.

2004-04-19  Keisuke Nishida  <knishida@open-cobol.org>

	* tree.h (cb_perform): New members `exit_label' and `cycle_label'.
	* reserved.c (CYCLE): New reserved word.
	* parser.y (exit_statement): EXIT PERFORM [CYCLE] statement.
	* codegen.c (output_perform_once, output_perform): Output labels.

2004-04-07  Keisuke Nishida  <knishida@open-cobol.org>

	* parser.y (basic_literal, alnum_literal): Literal concatenation.
	* tree.c, tree.h (cb_concat_literals): New function.
