@@ -1,3 +1,7 @@
+2004-09-07  Keisuke Nishida  <knishida@open-cobol.org>
+
+	* tree.c (finalize_file): Use cb_build_implicit_field to create record.
+
 2004-07-06  Keisuke Nishida  <knishida@open-cobol.org>
 
 	* parser.y (add_statement, add_body, compute_statement, compute_body)
